--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,6 +37,7 @@ navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx",
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version = "2.9.0" }
 retrofit_gson = { group = "com.squareup.retrofit2", name = "converter-gson", version = "2.9.0" }
 okhttp_logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version = "4.11.0" }
+google_auth = { group = "com.google.auth", name = "google-auth-library-oauth2-http", version = "1.23.0" }
 
 
 [plugins]
